@@ -1,3 +1,8 @@
+2007-10-23  Daniel Morales  <daniminas@gmail.com>
+
+	* src/twitux-send-message-dialog.c: Add support to
+	send Direct Messages to followers.
+
 2007-10-21  Daniel Morales  <daniminas@gmail.com>
 
 	* data/main.glade:
